<resources>
    <string name="app_name">多格健康</string>
    <string name="prompt_email">邮件地址或手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_facebookmessenger_client_inavailable">目前您的FacebookMessenger版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_confirm">确定</string>
    <string name="ssdk_oks_contacts">联系人</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_plurk">Plurk</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_share_to_facebook">分享到Facebook</string>
    <string name="ssdk_share_to_googleplus">分享到Google+</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="audiochat_str_cancel">Release finger,cancel to send</string>
    <string name="audiochat_str_cancel_send">To slide on your fingers,cancel to send</string>
    <string name="audiochat_str_pressed_speak">Press to talk</string>
    <string name="audiochat_str_release_cancel">Release finger,cancel to send</string>
    <string name="audiochat_str_release_end">Release to finish</string>
    <string name="audiochat_str_too_short">Recording time is too short</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="about_title">关于</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_chat_no_in_group">不在组内</string>
    <string name="audio_chat_title">语音聊天</string>
    <string name="avatar_system_ava">系统头像</string>
    <string name="avatar_system_from_album">从相册选取</string>
    <string name="avatar_system_take_pic">拍照</string>
    <string name="avatar_title">头像设置</string>
    <string name="blood_oxygen_average_num">%1$d%%</string>
    <string name="blood_oxygen_tip1">指尖血氧检测数值一般不低于90</string>
    <string name="blood_oxygen_tip2">当前血氧有点低</string>
    <string name="blood_oxygen_tip4">当前血氧合适</string>
    <string name="blood_oxygen_tip5">血氧指数</string>
    <string name="blood_oxygen_title">血氧</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_user_info_title">微聊成员</string>
    <string name="check_app_update_can_ver_str">可更新版本：</string>
    <string name="check_app_update_cancel">稍后更新</string>
    <string name="check_app_update_ok">立即更新</string>
    <string name="check_app_update_title">App版本更新</string>
    <string name="class_stop_afternoon_time">下午上课时间</string>
    <string name="class_stop_begin">开始</string>
    <string name="class_stop_enable">开启上课禁用</string>
    <string name="class_stop_enable_false">关闭上课禁用</string>
    <string name="class_stop_end">结束</string>
    <string name="class_stop_morning_time">上午上课时间</string>
    <string name="class_stop_repeat">重复</string>
    <string name="class_stop_tip1">手表上课免打扰，维护课堂好秩序</string>
    <string name="class_stop_tip2">上课禁用期间，宝贝的手表只能查看时间，同时保留定位功能；家长远程解除后，即可联系孩子。</string>
    <string name="class_stop_title">上课禁用</string>
    <string name="class_stop_week">星期</string>
    <string name="common_all_edit_fail">修改失败</string>
    <string name="common_all_edit_ok">修改成功</string>
    <string name="common_all_no_auth">非管理员，没有权限</string>
    <string name="common_all_tip_1">提示</string>
    <string name="common_all_tip_2">确认</string>
    <string name="common_all_tip_3">取消</string>
    <string name="common_choose_all">全选</string>
    <string name="common_choose_already_1">已选中</string>
    <string name="common_choose_already_2">项</string>
    <string name="common_choose_sure">确认</string>
    <string name="common_del_tip_1">确认删除</string>
    <string name="common_del_tip_2">删除成功</string>
    <string name="common_del_tip_3">删除失败</string>
    <string name="common_menu_item_sure">确认</string>
    <string name="common_no_data">没有数据</string>
    <string name="common_no_data_desc">需要提供数据</string>
    <string name="common_no_phone">请先设置手表的手机号码</string>
    <string name="common_save_tip_1">是否保存</string>
    <string name="common_save_tip_2">保存成功</string>
    <string name="common_save_tip_3">保存失败</string>
    <string name="contacts_add_phone_hint">联系人电话号码</string>
    <string name="contacts_add_shortnum_hint">联系人短号/亲情号</string>
    <string name="contacts_add_tip_1">名字不能为空</string>
    <string name="contacts_add_tip_2">电话号码不能为空</string>
    <string name="contacts_add_tip_3">类型不能为空</string>
    <string name="contacts_add_title_add">添加联系人</string>
    <string name="contacts_add_title_edit">编辑联系人</string>
    <string name="contacts_add_user_hint">联系人昵称</string>
    <string name="contacts_from_db_search">搜索</string>
    <string name="contacts_from_db_title">通讯录</string>
    <string name="contacts_item_2">紧急求救号码</string>
    <string name="contacts_item_4">电话联系人</string>
    <string name="contacts_item_5">监听号码</string>
    <string name="contacts_tip_1">设置成功</string>
    <string name="contacts_tip_2">设置失败</string>
    <string name="contacts_title">通讯录</string>
    <string name="country_code_title">国际区号</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="forget_pass_code_not_empty">验证码不允许为空</string>
    <string name="main_item_device_phone_call">通话</string>
    <string name="main_item_lookafter">看护</string>
    <string name="main_item_more">更多</string>
    <string name="setup_item_about">关于我们</string>
    <string name="setup_item_help">帮助</string>
    <string name="setup_item_manager_watch">管理手表</string>
    <string name="setup_item_map_choose">地图选择</string>
    <string name="setup_item_map_choose_1">Google</string>
    <string name="setup_item_map_choose_2">Baidu</string>
    <string name="setup_item_map_choose_3">AMap</string>
    <string name="setup_item_share">分享</string>
    <string name="setup_title">设置</string>
    <string name="addFence">添加围栏</string>
    <string name="original_trace">原始轨迹</string>
    <string name="correct_trace">轨迹纠偏</string>
    <string name="bg_trademark_declare">该应用由多格科技开发</string>
    <string name="developed_by_duoker">developed by Duoker</string>
    <string name="www_duoker_cc">www.duoker.cc</string>
    <string name="back_text">返回</string>
    <string name="exit_text">退出</string>
    <string name="main_item_config">设置</string>
</resources>