<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.amap.api.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/bt_addFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:text="@string/addFence"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/record_show_activity_trace_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/record_show_activity_origin_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/original_trace" />

            <View
                android:layout_width="15dp"
                android:layout_height="5dp"
                android:layout_gravity="center_vertical"
                android:background="#0000FF"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/record_show_activity_grasp_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_trace" />

            <View
                android:layout_width="15dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/grasp_flag"
                android:paddingLeft="15dp" >
            </View>
        </LinearLayout>
    </RadioGroup>

</RelativeLayout>