<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lc_layout_default_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.duoker.watch.ui.view.CircleImageView
            android:id="@+id/avatar_iv"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_marginTop="16.0dip"
            android:src="@drawable/iflytek_face_01" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text=""
            android:textSize="18.0sp" />

        <TextView
            android:id="@+id/watch_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:layout_marginTop="10.0dip"
            android:text=""
            android:textColor="#ffbebebe"
            android:textSize="16.0sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/separator_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/layout_item_bg"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip">

            <ImageView
                android:layout_width="44.0dip"
                android:layout_height="44.0dip"
                android:layout_marginBottom="10.0dip"
                android:src="@drawable/home_setting_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_item_share" />
        </LinearLayout>

        <ImageView
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="14.0dip"
            android:layout_marginTop="14.0dip"
            android:background="@color/separator_line" />

        <LinearLayout
            android:id="@+id/manager_watch_layout"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/layout_item_bg"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingTop="10.0dip">

            <ImageView
                android:layout_width="44.0dip"
                android:layout_height="44.0dip"
                android:layout_marginBottom="10.0dip"
                android:src="@drawable/home_setting_manager_watch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_item_manager_watch" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginTop="16.0dip"
        android:background="@color/separator_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@drawable/layout_item_bg"
        android:clickable="false">

        <LinearLayout
            android:id="@+id/map_inner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/menu_item_imageview_width"
                android:layout_height="@dimen/menu_item_imageview_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left1"
                android:src="@drawable/icon_map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left2"
                android:lines="1"
                android:text="@string/setup_item_map_choose"
                android:textSize="@dimen/menu_item_textsize" />

            <RadioGroup
                android:id="@+id/map_type_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14.0dip"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/google_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_item_map_choose_1" />

                <RadioButton
                    android:id="@+id/baidu_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_item_map_choose_2"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/amap_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_item_map_choose_3" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="@dimen/menu_item_separator_line_left"
        android:background="@color/separator_line" />

    <RelativeLayout
        android:id="@+id/about_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@drawable/layout_item_bg"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/menu_item_imageview_width"
                android:layout_height="@dimen/menu_item_imageview_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left1"
                android:src="@drawable/home_setting_about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left2"
                android:text="@string/setup_item_about"
                android:textSize="@dimen/menu_item_textsize" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/menu_item_right1"
            android:src="@drawable/icon_arrow_right" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="@dimen/menu_item_separator_line_left"
        android:background="@color/separator_line" />

    <RelativeLayout
        android:id="@+id/help_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_item_height"
        android:background="@drawable/layout_item_bg"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/menu_item_imageview_width"
                android:layout_height="@dimen/menu_item_imageview_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left1"
                android:src="@drawable/home_setting_help" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/menu_item_left2"
                android:text="@string/setup_item_help"
                android:textSize="@dimen/menu_item_textsize" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/menu_item_right1"
            android:src="@drawable/icon_arrow_right" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/separator_line" />
</LinearLayout>