<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
  -->

    <FrameLayout android:id="@+id/menu_layout_outter"
        android:background="@drawable/main_container_menu_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <FrameLayout
            android:id="@+id/menu_manage_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/menu_layout"
            android:paddingTop="8.0dip"
            android:paddingBottom="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:textSize="12.0sp"
                android:textColor="@drawable/home_menu_item_tcolor"
                android:gravity="center"
                android:id="@+id/menu_myself"
                android:background="@android:color/transparent"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:button="@null"
                android:text="健康"
                android:drawableTop="@drawable/home_menu_home"
                android:drawablePadding="8.0dip"
                android:layout_weight="1.0" />

            <RadioButton
                android:textSize="12.0sp"
                android:textColor="@drawable/home_menu_item_tcolor"
                android:gravity="center"
                android:id="@+id/menu_location"
                android:background="@android:color/transparent"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:button="@null"
                android:text="@string/main_item_lookafter"
                android:drawableTop="@drawable/home_menu_location"
                android:drawablePadding="8.0dip"
                android:layout_weight="1.0" />

            <RadioButton
                android:textSize="12.0sp"
                android:textColor="@drawable/home_menu_item_tcolor"
                android:gravity="center"
                android:id="@+id/menu_device"
                android:background="@android:color/transparent"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:button="@null"
                android:text="@string/main_item_config"
                android:drawableTop="@drawable/home_menu_device"
                android:drawablePadding="8.0dip"
                android:layout_weight="1.0" />


            <RadioButton
                android:textSize="12.0sp"
                android:textColor="@drawable/home_menu_item_tcolor"
                android:gravity="center"
                android:id="@+id/menu_notify"
                android:background="@android:color/transparent"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:button="@null"
                android:text="@string/main_item_device_phone_call"
                android:drawableTop="@drawable/home_menu_remind"
                android:drawablePadding="8.0dip"
                android:layout_weight="1.0" />
            <RadioButton
                android:textSize="12.0sp"
                android:textColor="@drawable/home_menu_item_tcolor"
                android:gravity="center"
                android:id="@+id/menu_more"
                android:background="@android:color/transparent"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:button="@null"
                android:text="@string/main_item_more"
                android:drawableTop="@drawable/home_menu_more"
                android:drawablePadding="8.0dip"
                android:layout_weight="1.0" />
        </RadioGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menu_layout_outter"/>

</RelativeLayout>
